manifests/todos/overlays/prod/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app-dep
  namespace: prod-project
spec:
  replicas: 1
