manifests/todos/overlays/prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod-project
  name: frontend-app-dep
