manifests/todos/overlays/prod/postgres-sset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: prod-project
