manifests/todos/overlays/prod/broadcaster-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: prod-project
  name: todo-broadcaster-svc
