manifests/todos/overlays/prod/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: todos-gateway
  namespace: prod-project
